Rekonstruktion von alibindulager - ausserdem Intro kriyayoga weitergeschrieben

--- a/intro.tex
+++ b/intro.tex
@@ -214,7 +214,6 @@ Furthermore, \citeauthor{mallinsononline2013}\footnote{Cf. \fullcite{mallinsonon
 
 \section{The rise of diversity: The increasing complexity of Yoga teaching systems in late medieval and pre-colonial India}
 
-
 In diesem Kapitel soll es darum gehen, dass zwischen dem 17. und 18. Jh. in Indien parallel zu einer Populariserung des Yoga in breiten Schichten der gesellschaft jenseits der asketischen Traditionen eine allgemeine Entwicklung zu beobachten ist, die sich in gesteigerter Komplexität äußert. In den damals zirkulierenden Texten kommt es zu einer Steiugerung der Anzahl der gelehrten Cakras, Āsanas, Kumbhakas, aber auch die Taxonomien der einzelnen Yogakategorien die gelehrt werden nehmen an Komplexität zu. 
 
 \subsection{Ein kurzer Überblick der in texten zu Verwenung kommenden Taxonomien.}
@@ -367,7 +366,9 @@ The main difference to the Kriyāyoga that Rāmacandra has constructed from thes
 
 In the three verses concluding this section, which are only handed down in the \textit{Yogakarṇikā}, the practitioner is referred to as \textit{mantrin} and should perform recitation and fire offerings until entering absorption (\textit{laya}).
 
-Thus, this concept of Kriyāyoga in the \textit{Yogasvarodaya} is a clear reference to the \textit{kriyāpāda}\footnote{See e.g. \citeauthor{ganesan2016saiva} (2016) and \citetitle{mrgendragama} (Ed. pp. 1-205).} of the Śaiva \textit{āgama}s. The Śaiva \textit{āgama}s are collections of various tantric traditions, written in Sanskrit or Tamil, in which cosmology, epistemology, philosophical teachings, various practices such as meditation or yoga, mantra recitation, worship of the gods, etc. are described. These texts\footnote{The fourfold division of \textit{pāda}s is only present in a limited number of Āgamas: \textit{Kiraṇa}, \textit{Suprabheda}, \textit{Mṛgendra} and \textit{Mataṅgaparameśvara} (as Upāgamas), see \citeauthor{brunner1994place} (1993: 225-461) for an overview.} usually consist of four sections (\textit{pāda}s): The \textit{jñānapāda} (knowledge section), \textit{kriyāpāda} (action section), \textit{caryāpāda} (behaviour section) and the \textit{yogapāda} (yoga section).\footnote{The order or the \textit{pāda}s varies, but the \textit{yogapāda} is always the last.} It can be no coincidence that \textit{jñāna°}, \textit{kriyā°} and \textit{caryā°} were each integrated as a separate yoga category within the taxonomy of the fifteen yogas\footnote{see p.\pageref{intro}.}. The \textit{kriyāpāda} is the section of a Śaiva \textit{āgama} that describes rules and practices for the performance of various rituals such as the significant initiation (\textit{dīkṣa}), ceremonies and worship of the gods. Additionally, \textit{prāṇāyāma} techniques and meditations are often found as parts of these rituals. There are also explanations of the nature of \textit{mudrā}s, \textit{maṇḍala}s and \textit{mantra}s. Furthermore, various characteristics of different types of Śaiva initiates\footnote{These are \textit{samayin, putraka, sādhaka, ācārya,} and \textit{astrābhiṣeka}.} can be found here.\footnote{See \citeauthor{ganesan2016saiva} (2016) for a general overview of the four \textit{pāda}s. One of the few Śaiva \textit{āgama}s that has been edited and translated into a Western language (French) is the \citetitle{mrgendragama}. For this see \citeauthor{mrgendragama} (1962) \& \citeauthor{mrgendragamabrunner} (1985).} The \textit{kriyā}s mentioned at the beginning of the \textit{Yogasvarodaya} - meditation, ritual veneration, donation, recitation, fire sacrifice, etc. have hardly deniable parallels to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s and thus could have their reception-historical roots precisely there. The other part, however, which describes the cultivation or reduction of certain intentions preceding all actions (\textit{saṅkalpa}) or [mental] waves (\textit{kallola}), I have not yet been able to locate in the Śaiva \textit{āgama}s.
+Thus, this concept of Kriyāyoga in the \textit{Yogasvarodaya} is a clear reference to the \textit{kriyāpāda}\footnote{See e.g. \citeauthor{ganesan2016saiva} (2016) and \citetitle{mrgendragama} (Ed. pp. 1-205).} of the Śaiva \textit{āgama}s. The Śaiva \textit{āgama}s are collections of various tantric traditions, written in Sanskrit or Tamil, in which cosmology, epistemology, philosophical teachings, various practices such as meditation or yoga, mantra recitation, worship of the gods, etc. are described. These texts\footnote{The fourfold division of \textit{pāda}s is only present in a limited number of Āgamas: \textit{Kiraṇa}, \textit{Suprabheda}, \textit{Mṛgendra} and \textit{Mataṅgaparameśvara} (as Upāgamas), see \citeauthor{brunner1994place} (1993: 225-461) for an overview.} usually consist of four sections (\textit{pāda}s): The \textit{jñānapāda} (knowledge section), \textit{kriyāpāda} (action section), \textit{caryāpāda} (behaviour section) and the \textit{yogapāda} (yoga section).\footnote{The order or the \textit{pāda}s varies, but the \textit{yogapāda} is always the last.} It can be no coincidence that \textit{jñāna°}, \textit{kriyā°} and \textit{caryā°} were each integrated as a separate yoga category within the taxonomy of the fifteen yogas\footnote{see p.\pageref{intro}.}. The \textit{kriyāpāda} is the section of a Śaiva \textit{āgama} that describes rules and practices for the performance of various rituals such as the significant initiation (\textit{dīkṣa}), ceremonies and worship of the gods. Additionally, \textit{prāṇāyāma} techniques and meditations are often found as parts of these rituals. There are also explanations of the nature of \textit{mudrā}s, \textit{maṇḍala}s and \textit{mantra}s. Furthermore, various characteristics of different types of Śaiva initiates\footnote{These are \textit{samayin, putraka, sādhaka, ācārya,} and \textit{astrābhiṣeka}.} can be found here.\footnote{See \citeauthor{ganesan2016saiva} (2016) for a general overview of the four \textit{pāda}s. One of the few Śaiva \textit{āgama}s that has been edited and translated into a Western language (French) is the \citetitle{mrgendragama}. For this see \citeauthor{mrgendragama} (1962) \& \citeauthor{mrgendragamabrunner} (1985).} The \textit{kriyā}s mentioned at the beginning of the \textit{Yogasvarodaya} - meditation, ritual veneration, donation, recitation, fire sacrifice, etc. have hardly deniable parallels to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s and thus could have their reception-historical roots precisely there. The other part, however, which describes the cultivation or reduction of certain mental configurations preceding all actions (\textit{saṅkalpa}) or [mental] waves (\textit{kallola}), I have not yet been able to locate in the Śaiva \textit{āgama}s, but possibly they are a simplyfied rendering of the Pātañjalean model of Kriyāyoga that was passend on in hitherto unknown traditions that practiced this type of Kriyāyoga.
+
+One other possible historical link which should not remain unmentioned might be the model of Kriyāyoga found in the \textit{Uddhavagīta}\footnote{See i.e., \citeauthor{uddhavagita2007} (2007).} which is a part of the famous \textit{Bhāgavatapurāṇa}\footnote{See i.e., \citeauthor{bhagavata} (1950).}. Here, in chapter XXII.1-55 Kṛṣṇa describes a Vaiṣṇava form of Kriyāyoga in response to a request by his disciple Uddhava. The practice entails a very complex and devotional ceremonial veneration of the deity through offerings such as flowers and food, accompanied by the recitation of prescribed mantras, meditation, and the ritual consecration of the deity, among other rites. According to the text, this type of Yoga is the most beneficial for women and the working class (22.4) and is considered a means for liberation from the fetters of Karma (22.5). The Kriyāyoga described here is presented to be in line with both the Vedas and the Tantras, considering enjoyment (\textit{bhukti}) and liberation (\textit{mukti} and is promised to bestow perfection in both this life and the next, by the Lord's grace (22.49).  
 
 \subsection{The concept of Kriyāyoga in the \textit{Yogasiddhāntacandrikā}}
 
@@ -384,17 +385,42 @@ The Kriyāyoga in \textit{Yogatattvabindu} and \textit{Yogasvarodaya} could, the
 
 \subsection{Kriyāyoga in the complex late-medieval Yoga taxonomies}
 
-The analysis of Kriyāyoga within the taxonomies of fifteen yogas shows two distinct models. One is Nārāyaṇatīrtha's model, which draws directly on the Kriyāyoga of \textit{Pātañjalayogaśāstra}. Additional śaiva influences characterise the other model of Kriyāyoga that seems to have been prominent in the 17. - 18. century C.E. The precisely defined \textit{kriyā}s of the \textit{Yogasvarodaya} must be historically linked to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s, whereby the core practice of reducing and cultivating specific mental configurations before any action is loosely associated with the Kriyāyoga of the \textit{Pātañjalayogaśāstra}. The observation that the \textit{kriyā}-, \textit{caryā-} \textit{jñānayoga}, an allusion to the \textit{kriyā}-, \textit{caryā-} \textit{jñānapāda}s of the Śaiva \textit{āgama}s, shows that Nārāyaṇatīrtha, as a proponent of the \textit{Pātañjalayoga}, could not possibly have been the originator of the fifteenfold taxonomy, but rather that this taxonomy of the fifteen yogas had achieved such local popularity in the discourse of the time and that Nārāyaṇatīrtha perhaps wanted to convince his readers that Patañjali's \textit{Yogaśāstra} is the Yoga \textit{par excellence} and all varieties of Yogas are in truth already present in the ``classical'' system of Patañjali.
+The analysis of Kriyāyoga within the taxonomies of fifteen yogas shows two distinct models. One is Nārāyaṇatīrtha's model, which draws directly on the Kriyāyoga of \textit{Pātañjalayogaśāstra}. Additional śaiva influences characterise the other model of Kriyāyoga that seems to have been locally prominent in the 17. - 18. century C.E. The precisely defined \textit{kriyā}s of the \textit{Yogasvarodaya} must be historically linked to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s, whereby the core practice of reducing and cultivating specific mental configurations before any action is loosely associated with the Kriyāyoga of the \textit{Pātañjalayogaśāstra}. The observation that the \textit{kriyā}-, \textit{caryā-}, and \textit{jñānayoga}s, are an allusion to the \textit{kriyā}-, \textit{caryā-}, \textit{jñāna-} and \textit{yogapāda}s of the Śaiva \textit{āgama}s, shows that Nārāyaṇatīrtha, as a proponent of the \textit{Pātañjalayoga}, was most likely not the originator of the fifteenfold taxonomy, but rather that the taxonomy of the fifteen yogas originated from local discourses around the authors und had achieved such local popularity at the time that Nārāyaṇatīrtha forced the fifteenfold taxonomy into Patañjali's \textit{Yogaśāstra} in order to show that the Yogaśāstra \textit{par excellence} and all those varieties of Yogas that were discussed in his sphere are in truth already present in the ``classical'' system of Patañjali.
 
-\subsection{Exkurs: Popularisierung des Kriyāyoga im globalen Kontext}
+\subsection{Popularisierung des Kriyāyoga im globalen Kontext}
 
 Die vergleichsweise einzigartigen Abhandlungen über Kriyāyoga, welche sich in der Yogaliteratur ab dem 17. Jh.\footnote{The terminus \textit{ad quem} for the \textit{Yogasvarodaya} is 1659 CE, see p.\pageref{dating} for the details.} nur im \textit{Yogasvarodaya} sowie Rāmacandra's \textit{Yogatattvabindu} zeigen, welche offenbar, wenn auch nicht gänzlich vom Pātañlaja-Modell abweichen, und, wie gezeigt, deutliche Einflüsse tantrischer Abstammung aufweisen, können bis auf Weiteres als Randphänomene betrachtet werden. Die überwältigende Mehrheit der im zweiten Jahrtausend n. u. Z. verfassten Sanskrit Yogatexte greift auf das im \textit{Pātañjalayogaśāstra} propagierte Modell des Kriyāyoga zurück. Dementsprechend war es auch vor allem die Erschließung des \textit{Yogasūtra}s im Westen, beginnend mit der Übersetzung von Henry Thomas Colebrooke im Jahr 1805\footnote{See \parencite{colebrooke2014} for a detailled discussion.} welche dafür sorgte, dass das darin enthaltene Konzept des Kriyāyoga auch im Westen lange Zeit das Verständnis des Begriffes im akademischen und informellen Diskurs dominierte. 
 
-Dies änderte sich erst mit dem globalen Erfolg und der Popularität von Paramahaṃsa Yogānanda (1893-1952) und der im Jahre 1920 von ihm gegründeten \textit{Self Realization Fellowship}, welche ihre ganz eigene Yogapraxis unter der Oberkategorie Kriyāyoga verbreiteten. Hierdurch wurde das Bedeutungsspektrum des Begriffes Kriyāyoga signifikant verändert und erweitert. Neben diversen Büchern die Yogānanda veröffentlichte, war es vor allem das im Jahr 1946 erschienene Buch \citetitle{autobioyogi}, die Autobiographie von Paramahaṃsa Yogānanda selbst, welches maßgeblich zum Erfolg von Yogānanda beitrug. Bis zum heutigen Tag gilt dieses Werk als Klassiker in der populären Yogaliteratur, befindet sich seit über siebzig Jahren im Druck und wurde in mehr als 50 Sprachen (Stand Jan. 2019) übersetzt.\footnote{Beleg!} Bis heute existiert eine globalen Anhängerschaft. Yogānanda, seine Bücher, seine globale Anhängerschaft und die zahlreichen Bücher seiner Anhängerschaft machten ihr eigenes ``Kriyāyoga'' jenseits des indischen Subkontinents bekannt. Diese Art von Kriyāyoga wurde bereits von Yogānandas Vorgängern zum zentralen Oberbegriff dieser Yogatradtionslinie stilisiert und dessen Konzept ist im aktuellen, vor allem non-akademischen Diskurs der Gegenwart schätzungsweise genauso bekannt, wie das Kriyāyoga des Yogasūtra.
+Dies änderte sich erst mit dem globalen Erfolg und der Popularität von Paramahaṃsa Yogānanda (1893-1952) und der im Jahre 1920 von ihm gegründeten \textit{Self Realization Fellowship}, welcher, gemessen an den weiter oben skizzierten historisch nachweisbaren Formen des Kriyāyoga, eine neuartige Yogapraxis unter dem Oberbegriff Kriyāyoga verbreitete. Hierdurch wurde das Bedeutungsspektrum des Begriffes Kriyāyoga signifikant verändert und erweitert. Neben diversen Büchern die Yogānanda veröffentlichte, war es vor allem das im Jahr 1946 erschienene Buch \citetitle{autobioyogi}, die Autobiographie von Yogānanda selbst, welches maßgeblich Yogānandas Erfolg den Weg ebnete. Bis zum heutigen Tag gilt dieses Werk als Klassiker in der populären Yogaliteratur, befindet sich seit über siebzig Jahren im Druck und wurde in mehr als 50 Sprachen (Stand Jan. 2019) übersetzt.\footnote{Beleg!} Außerdem existiert gegenwärtig eine globale Anhängerschaft. Yogānanda, seine Bücher, seine Anhänger und die zahlreichen Bücher seiner Anhänger machten diese innovative Form des Kriyāyoga jenseits des indischen Subkontinents bekannt. Der Ursprung dieser Art von Kriyāyoga wurde angeblich bereits von Yogānandas Vorgängern, namentlich Lahiri Mahasaya (1828-1895) und Śrī Yukteśvar Giri (1855-1936),\footnote{Cf. \citeauthor{govindan2010} 2010:51-52.} zum zentralen Oberbegriff der Yogapraxis dieser Tradtionslinie stilisiert. 
 
-Was ist das Kriyāyoga nach Yogānanda? Und wie unterscheidet es sich von den bereits präsentierten Modellen?
+Einer von Yogānandas Zeitgenossen war Svāmī Śivānanda Sarasvatī (1987-1963), welcher in ähnlicher Weise eine neue Form des Kriyāyoga propagierte. Zwar basierte sein Kriyāyoga zunächst größtenteils auf dem Pātañjalayoga-Modell, wurde aber unter dem gleichen Oberbegriff mit Praktiken des Haṭhayoga erweitert und von Yogānandas Modell beeinflusst. Diese Erweiterung und Integration von neuen Praktiken unter den Oberbegriff Kriyāyoga setzte sich bei seinen Schülern, allen voran Svāmī Satyānanda Sarasvatī (1923-2009), dem Gründer der berühmten \textit{Bihar School of Yoga} (seit 1962), in exzessiver Weise fort.
 
-Um diese Frage zu beanworten habe ich eine ganz Liste bedeutsamer Publikationen zu diesem Thema konsultiert. \footnote{List with all puplications. Yet, cannot clame this list is complete or exhaustive.}
+Die hieraus resultierende Popularität des Kriyāyoga löste eine globale Welle aus und inspirierte weitere Akteure, die wiederum ähnliche, aber teils anders nuancierte Kriyāyoga-Systeme entwickelten. Hier ist beispielsweise S.A.A. Ramaiah zu nennen, der 1952 die \textit{Kriya Babaji Yoga Sangam} gründete. Auch in diesem Fall gibt es eine globale Anhängerschaft.\footnote{Cf. \cite{kriyababajiyoga}.}
+
+Es waren die oben genannte Akteure, allen voran Yogānanda, welche für die globale Popularisierung dieser neuen Form des Kriyāyoga sorgten, sodass deren Konzepte im rezenten öffentlichen Diskurs mindestens genauso bekannt, wenn nicht sogar bekannter sind, wie das Kriyāyoga des \textit{Pātañjalayogaśāstra}.
+
+Diese ab dem Beginn des 19. Jahrhunderts nachweislichen Formen des Kriyāyoga, sind, wie gezeigt werden wird, ein Sammelbecken für innovative Kombinationen und Weiterentwicklungen von zahlreichen, bereits in der mittelalterlichen bis vorkolonialen in Yogatexten kodifizierten Praktiken, die offenbar von Akteuren wie Yogānanda, Śivānanda, Ramaiah usw. je nach individueller Ausprägung, in kohärent anmutende Übungssysteme integriert worden sind. Die von den eigenen Tradtionen gemachten Angaben zur Historizität ihrer Yogapraxis bedienen sich erprobter Narrative, um dieser Form des Kriyāyoga eine Tradition und historische Legitimität zu verliehen.      
+
+\subsection{Die Kriyāyogas der Traditionslinien von Paramahaṃsa Yogānanda, Svāmī Śivānanda Sarasvatī und Ramaiah}
+
+Was macht nun diese neuen Formen des Kriyāyoga aus? Um diese Frage zu beanworten wurden rezente Publikationen zu diesem Thema konsultiert.\footnote{Diese Liste ist sicherlich nicht vollständig. Dennoch habe ich versucht und möglichst weites Spektrum dieser Art der Publikationen zu konsultieren. 1) Yogānanda-Modell: \citeauthor{autobioyogi} (1949); \citeauthor{kriyayogalowenstein} (2021); \citeauthor{kriyayogasarasvati1981} (1981); \citeauthor{hariharananda1989} (1989); \citeauthor{kriyayogaupanishad1993} (1993) and \citeauthor{kriyayogasturgess2015} (2015). 2) Śivānanda-Modell: \citeauthor{shivanandakriya1982} (1955) and \citeauthor{kriyayoganityananda2013} (2013). Ramaiah-Modell: \citeauthor{govindan2010} (2010).} Die folgende Betrachtung soll in Kürze die Grundzüge des Yogānanda-, Śivānanda- und Ramaiah-Modells des Kriyāyoga skizzieren, ohne dabei Anspruch auf Vollständigkeit zu erheben. Eine umfassende und vollständige historische Untersuchung von Kriyāyoga ist meiner Kenntnis nach bisher noch nicht geleistet worden und kann in diesem Rahmen auch nicht geleistet werden. Der hiesige Versuch ist eine Skizzierung und soll als Annährung des Themas verstanden werden, um einerseits die im öffentlichen Diskurs kursierenden Modelle zu differenzieren und andererseits eine Hypothese zum Übergang der älteren Modelle hin zu den neueren Modellen aufzustellen, da diese zeitlich sehr eng beieinander liegen.  
+
+In den konsultierten Publikationen finden sich uneinheitliche Etymologien und Erklärungen des Begriffes Kriyāyoga.\citeauthor{hariharananda1989}, der von Yogānanda authorisierter\footnote{Cf. \citeauthor{hariharananda1989} 1989: 16.} Kriyāyoga-Lehrer exklärt: \begin{quote} 'Kriya Yoga' are Sanskrit words, a combination of two root words. One is Kriya and the other is yoga. In the word Kriya there are two syllables: kri and ya. Kri means to pursue your work in daily life and ya means to be ever aware of the invisible God who is abiding in you and is directing and accomplishing work through you. \ldots The second word, 'yoga,' literally means union of the visible body with the invisible body. This union is always present in everyone. (\citeauthor{hariharananda1989} 1989: 83) \end{quote}.
+Die komplexeste Erklärung des Begriffes befindet sich bei \citeauthor{kriyayoganityananda2013} (2013), welcher sich ebenfalls in der Traditionslinie des Yogānanda verortet: \begin{quote}
+  The word \textit{kriyā} is composed of the letters \textit{k}, \textit{r}, \textit{i}, \textit{y}, and \textit{ā}. The letter -\textit{k} (or \textit{ka}, \textit{ka-kāra}, represents the Lord, \textit{Īśvara}. The Transcendental Lord, \textit{Parama Śiva}, when he manifests Himself in the suble world and makes Himself ready for creation He becomes \textit{Īśvara}. The letter-\textit{r} (or \textit{ra}), \textit{ra-kāra}, represents fire, light and manifestation. Creation is not seen by us with the ether and air elements since these are subtle elements. We are able to see manifestation from the fire element onwards. The letter -\textit{i}, \textit{i-kāra}, represents energy or \textit{śakti}. So \textit{kri} is the activating power of the Lord manifested in creation. The activating power is called \textit{prāṇa} or vital force. The letter -\textit{y} (or \textit{ya}), \textit{ya-kāra}, represents the air element and the letter -\textit{ā}, \textit{ā-kāra}, represents form. For the manifestations to take a form, \textit{ākāra}, the Lord acts with the air element. With the ether element there is no form. The air element or gaseous state is the first created form although we only see the forms from the fire element onwards. Through the action of air the whole universe is manifested. This is the action of the Life-force, \textit{prāṇakarma}, of the Lord. The word \textit{kriyā} normally means action, but this is the action of god. We are made with the same principle God is. Our identification with the physical body makes us separate from God and this is the state of ignorance. We have to eradicate this ignorance by the action of God, i.e., the action of the breath, \textit{prāṇakarma}. Our mind is the result of ignorance and is responsible for the wrong identification. Breath-practice, \textit{prāṇakarma}, absorbs the mind into the vital force. This action of God reverses the process and leads us from body to God. This is why it is so necessary to perform that action. That is our spiritual practice. Then that action, \textit{kriyā}, becomes yoga. (\citeauthor{kriyayoganityananda2013} 2013: 2-3) \end{quote}
+Satyānanda, ein wichtiger Akteur des Śivānanda-Modells definiert Kriyāyoga wiefolgt: \begin{quote} The Sanskrit word \textit{kriya} means `action' or `movement'. \textit{Kriya Yoga} is so called because it is a system where one intentionally rotates one's attention along fixed pathways. This movement of awareness is done, however with control. Also kriya yoga is so called because one moves the body into specific mudras, bandhas and asanas according to a fixed scheme of practice. The word \textit{kriya} is often translated as meaning `practical'. This is indeed a good definition, for kriya yoga is indeed practical. It is concerned solely with practice, without the slightest philosophical speculation. The system is designed to bring results, not merely to talk about them. Sometimes the word \textit{kriya} is translated as `preliminary'. This too is a good definition, for kriya yoga is a preliminary practice that leads first to dharana and then eventually to the transcendental state of dhyana (meditation) and yoga (union). It is a technique which has been designed to lead to that state of being which is beyond all techniques. Finally, the word \textit{kriya} is used to describe each individual practice. Thus the process of kriya yoga consists of a number of kriyas each being done one after the other in a fixed sequence. (\citeauthor{kriyayogasarasvati1981} 1981:699)\end{quote}
+\citeauthor{govindan2010}, ein Schüler von Ramaiah bietet die simpelste Erläuterung des Begriffes: \begin{quote} Kriyā ist eine mit Achtsamkeit ausgeführte Aktivität. (\citeauthor{govindan2010} 2010: 214) \end{quote}
+
+So unterschiedlich die hier wiedergegebenen Konzepte auch sind, so ist deren Schnittmenge jedoch, dass es hier um bewusst ausgeführte Handlungen bzw. Praktiken geht, die den Menschen mit Gott verbinden, bzw. einen Transzendenten Zustand hervorbringen sollen. \citeauthor{kriyayoganityananda2013} erwähnt schließlich bereis in seiner Definition die zentrale Handlung (\textit{kriyā}), welche zur Verbindung mit Gott führen, nämlich Atempraxis (\textit{prāṇakarma}). Darüber hinaus werden von \citeauthor{kriyayogasarasvati1981} auch weitere Praktiken wie Aufmerksamkeitslenkung, \textit{mūdra}s, \textit{bandha}s und \textit{āsana}s genannt.  
+
+In den kolsultierten Texten finden sich weitere Definition, aber für die hiesigen Zwecke sind diese bereits ausreichend, denn sie veranschaulichen einerseits die Grundidee der neuen Modelle des Kriyāyoga, und zeigen andererseits eine grundlegende Vielfalt und Offenheit des Modells, welche alle Bereiche dieser Formen des Kriyāyoga durchdringt. 
+
+Beispielsweise präsentiert uns \citeauthor{govindan2010} gleich sieben unterschiedliche Unterkategorien des Kriyāyoga im Yogānanda-Modell:
+
+
+
+
+Yogānanda, seine Nachfolger, Anhänger und wohl auch dessen Vorgänger führen die Lehre des von ihnen propagierten Kriyāyoga auf eine legendäre Gründerfigur der Kriyāyoga-Traditionslinie namens Babaji zurück.  
 
 
 
@@ -403,7 +429,7 @@ Und wie ist es zu Stande gekommen?
 
 Kirya Lineage graphics (S.9 Kiryayoga for Self Discovery)
 
-I speculate that the term Kriyāyoga, as the generic term for his system of Yoga was likely a strategical decision of Lahiri Mahasaya. On the one hand he wanted to profit from the newly gained Yogasūtra Hype in the West. On the other hand in his local discourse around Varanasi which in these days was a true melting post in which several Traditions came together, the list of 15 Yogas with Kriyāyoga as the first category among the known Yoga varieties that existed had the exalted position and one that would allow him to do justice to the classical yoga of Patanjali, profit from the popularity of the term in the local discourse and reinterpreting the kriyā (action) aspect to allow him to integrate the whole array of practices that were available in his days. 
+I speculate that the term Kriyāyoga, as the generic term for his system of Yoga was likely a strategical decision of Lahiri Mahasaya. On the one hand he possibly wanted to profit from the newly gained Yogasūtra hype in the West, or at least was himself caught himself by this wave of excitement. On the other hand his involvement in the local discourse around Varanasi which in these days already was a melting pot of multiple traditions had possibly influenced him, too. As we know, the comlex taxonomies of with 15 Yogas and Kriyāyoga on top had an exalted position in the discourse and was not stragegically clever since it was not just regarded as one of the most accessable paths of Yoga, but a term that would allow him to profit from the popularity of the term, integrate Patañjali's Kriyāyoga and reinterprete the term \textit{kriyā} (action) to integrate the whole array of physical practices that were available in his days and invent new ones.  
 
 
 \section{Jñānayoga - \uproman{2}}
@@ -411,6 +437,35 @@ I speculate that the term Kriyāyoga, as the generic term for his system of Yoga
 
 Jñānāyoga\footnote{See section \uproman{21} on p.\pageref{jnanayogastart}-\pageref{jnanayogaend}.} is the second Yoga within Rāmacandra's list of fifteen Yogas as well as his source text, the \textit{Yogasvarodaya}. In Nārāyaṇatīrtha's list of fifteen, Jñānayoga occupies the sixth place. Sundardās positions Jñānayoga at the tenth position in his list of twelve Yogas. Here, it is subsumed under the Sāṅkhyayoga category, the third and final tetrad of his list.
 
+
+
+
+
+
+
+%Notes:
+
+%Chapter 15 - Trikāṇḍa-Yoga: Bhakti Surpasses
+%Knowledge and Detachment
+%(1) Śrī Uddhava said: 'The Vedic literature of Your Lordship, oh Lotus-eyed One,
+%that pays attention to the injunctions concerning actions and prohibitions, deals with
+%the good and bad sides of karma [akarma and vikarma]. (2) They also discuss the dif-
+%ferences within the varṇāśrama system wherein the father may be of a higher [anulo-
+%ma] or a lower [pratiloma] class than the mother, they are about heaven and hell and
+%expound on the subjects of having possessions, one's age, place and time [see also 4.8:
+%54 and *]. (3) How can human beings without Your prohibitive and regulatory words
+%concerning final beatitude, tell the difference between virtue and vice [compare 11.19:
+%40-45]? (4) The Vedic knowledge emanating from You offers the forefathers, the gods as
+%72Uddhava Gītā
+%also the human beings a superior eye upon the - not for everyone that evident - meaning
+%of life, what would be the goal, and how we may achieve. (5) The difference between
+%virtue and vice one can see with the help of Your Vedic knowledge and that insight does
+%not arise by itself, but the Vedas also nullify such a difference and thus clearly confuse
+%the issue....'
+%(6) The Supreme Lord said: 'The three ways of yoga I described in My desire to
+%grant human beings the perfection, are the path of philosophy [jñāna], the path of work
+%[karma] and the path of devotion [bhakti]; no other means can be found [for one's
+%emancipation. See also B.G. contents and trikāṇḍa].
 
 \section{Caryāyoga - \uproman{3}}
 \label{caryayogaintro}
