--- a/intro.bib
+++ b/intro.bib
@@ -37,7 +37,7 @@
 
 @book{kriyayogasarasvati1981,
 title={A Systematic Course in the Ancient Tantric Techniques of Yoga and Kriya},
-author={Saraswati, Swami Satyananda},
+author={Satyananda, Sarasvati Swami},
 year={1981},
 publisher={Yoga Publications Trust},
 address={Ganga Darshan, Munger, Bihar},
@@ -56,6 +56,7 @@ keywords={printed},
 @book{hariharananda1989,
 title={Kriya Yoga},
 subtitle={The Scientific Process of Soul-Culture and the Essence of All Religions},
+author={Hariharananda, Paramahamsa},
 year={1989},
 publisher={Motilal Banarsidass},
 address={New Delhi},
@@ -309,6 +310,29 @@ address={Lonavla},
   keywords={printsource},
 }
 
+@article{burger2014sarvangayogapradipika,
+  title = {La Sarvāṅgayogapradīpikā de Sundardās: une classification des chemins du yoga au 17e siècle},
+  author = {Burger, Maya},
+  journal = {Asiatische Studien = Etudes asiatiques},
+  year = {2014},
+  volume = {68},
+  number = {3},
+  pages = {683--708},
+  url = {https://www.degruyter.com/view/j/asia},
+  doi = {10.1515/asia-2014-0057},
+  publisher = {De Gruyter},
+  keywords = {seclit}, 
+ }
+
+@book{jones2008encyclopedia,
+  title = {Encyclopedia of Hinduism},
+  author = {Jones, Constance and Ryan, James},
+  year = {2008},
+  publisher = {Checkmark Books, an imprint of Infobase Publishing},
+  address = {New York},
+  keywords = {seclit}, 
+}
+
 @book{goraksapaddhati,
   title={Gorakṣapaddhati},
   subtitle={Goraksha Samhita: Also Known As Goraksha Paddhati},
@@ -401,8 +425,6 @@ address={Rochester},
 keywords={seclit},
 }
 
-
-
 @book{anandakanda,
   title = {Ānandakanda},
   editor = {S. V. Radhakrishna Sastri},
@@ -485,6 +507,16 @@ keywords={seclit},
   number       = {3},
   keywords={seclit}, 
  }
+
+@book{kaushik1993,
+  author    = {Kaushik, Ashok},
+  title = {Bhagavadgītā}, 
+  subtitle     = {Srimad Bhagavad Gita (Sanskrit, Hindi and English)},
+  year      = {1993},
+  publisher = {Star Publications},
+  address   = {New Delhi},
+  keywords = {printed}
+}
 
 @book{uddhavagita2007,
   title        = {The Uddhava-Gītā},
@@ -1414,6 +1446,14 @@ Sound},
   publisher={Motilal Banarsidas},
   address={Delhi},
   keywords={seclit},
+}
+
+@book{apte1890practical,
+  title = {The Practical Sanskrit-English Dictionary},
+  author = {Apte, Vaman Shivaram},
+  year = {1890},
+  publisher = {Shiralkar},
+  address = {Poona}
 }
 
 @book{yogapowers2017,
@@ -2756,6 +2796,14 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    keywords={printsource},
 }
 
+@book{upanishads1938,
+  author = {Kunjan Raja},
+  year = {1938},
+  publisher = {The Adyar Library},
+  address={Chennai}, 
+  keywords={printed}, 
+}
+
 @book{brhadaranyaka,
    title={Bṛhadāraṇyakopaniṣat},
    subtitle={with the \textit{bhāṣya} attributed to Śaṅkara}},
@@ -2910,7 +2958,15 @@ address={Delhi},
    keywords={printsource},
 }
 
-
+@book{singleton2013gurus,
+  title={Gurus of Modern Yoga},
+  author={Singleton, Mark and Goldberg, Ellen},
+  editor={Singleton, Mark},
+  year={2013},
+  publisher={Oxford University Press, USA},
+  address={Oxford}, 
+  keywords={seclit}, 
+}
 
 @book{hevajra,
    title={Hevajratantra},
@@ -3036,8 +3092,6 @@ address={Delhi},
   keywords={onlinesource},%
 }
 
-https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf
-
 @online{muktabodha,
   title = {Muktabodha},
   organization = {Muktabodha Indological Research Institute (MIRI)}, 
@@ -3084,7 +3138,7 @@ https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf
   title = {Kriya Babaji Yoga Sangam Website},
   organization = {Kriya Babaji Yoga Sangam}, 
   howpublished = {\url{https://web.archive.org/web/20240320214547/https://kriyababajiyogasangam.org/}},
-  note = {Website saved with the Way Back Machine of archive.org on 20.03.2024}, 
+  note = {\url{https://web.archive.org/web/20240320214547/https://kriyababajiyogasangam.org/}.Website saved with the Way Back Machine of archive.org on 20.03.2024}, 
   keywords={onlinesource},
 }
 
@@ -3104,3 +3158,22 @@ https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf
   note = {\url{https://muktalib7.com/}; Accessed: 02/17/2023; Catalog number : M00063; IFP transcript T0351}, 
   keywords={onlinesource},
 }
+
+@online{goswamikriyananda,
+  title = {Biography of Goswami Kriyananda},
+  subtitle = {Temple of Kriya Yoga Website}, 
+  organization = {Temple of Kriyayoga}, 
+  howpublished = {\url{https://web.archive.org/web/20240319134009/https://templeofkriyayoga.org/goswami-kriyananda/}},
+  note = {\url{https://web.archive.org/web/20240319134009/https://templeofkriyayoga.org/goswami-kriyananda/}. Website saved with the Way Back Machine of archive.org on 19.03.2024}, 
+  keywords={onlinesource},
+}
+
+
+@online{yoganandawebsite,
+  title = {Official Yogānanda Website},
+  organization = {Self Realization Fellowship}, 
+  howpublished = {\url{https://web.archive.org/web/20240323081653/https://yogananda.org/autobiography-of-a-yogi}},
+  note = {\url{https://web.archive.org/web/20240323081653/https://yogananda.org/autobiography-of-a-yogi}. Website saved with the Way Back Machine of archive.org on 23.03.2024}, 
+  keywords={onlinesource},
+}
+
